<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAdd">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/et_nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nume_jucator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/et_numar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numar"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nume"/>
    <RadioGroup
        android:id="@+id/rg_poz"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/et_numar">
        <RadioButton
            android:id="@+id/rb_portart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/portar"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rb_fundas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="fundas"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rb_mijlocas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mijlocas"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rb_atacant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atacant"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_jucator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_poz"/>


</androidx.constraintlayout.widget.ConstraintLayout>